moving pg data to volume

--- a/postgres/Makefile
+++ b/postgres/Makefile
@@ -2,8 +2,9 @@ echo:
 	@echo 'Welcome to open trading!'
 	
 db-start:
+	mkdir -p /data
 	docker build --build-arg postgres_pwd=${PGPASSWORD} -t opent-postgres:latest ./
-	docker run -d -p 5432:5432 --name opent-postgres opent-postgres:latest
+	docker run -d -p 5432:5432 -v /data:/var/lib/postgresql/data --name opent-postgres opent-postgres:latest
 	
 db-init:
 	psql -h 127.0.0.1 -U postgres -f ./ddl/init.sql
